# DIJA

./: .gitignore  DIJA.spec  EPS  Blank 2026.csv  MIGRATION_PLAN.md  build.bat  build_tauri.bat  create_promote_template.py  main.py  requirements.txt  roadmap.txt
backend/: __init__.py  app.py  config.py  models.py  schedule.py  sku.py  storage.py
data/: app_config_dev.csv  classes_dev.csv  eps_audit_dev.csv  eps_records_dev.csv  holidays_dev.csv  overrides_dev.csv  postpones_dev.csv  settings_dev.csv  stock_history_dev.csv
frontend/: app.js  index.html  styles.css
reference/: 11.3.2026.htm
reference/11.3.2026.files/: filelist.xml  sheet001.htm  stylesheet.css  tabstrip.htm
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  docx.rs  logger.rs  main.rs  models.rs  schedule.rs  sku.rs  storage.rs
src-tauri/src/auth/: db.rs  mod.rs  password.rs  permissions.rs  session.rs
src-tauri/src/commands/: admin.rs  auth.rs  calendar.rs  classes.rs  documents.rs  eps.rs  export_import.rs  file_ops.rs  holidays.rs  mod.rs  overrides.rs  postpones.rs  settings.rs  state.rs  textbooks.rs
template/: payinstruc_wtsapp.docx
template/messages/: 各校開放時間.docx  問卷.docx  已繳學費.docx  繳費提醒.docx  補堂注意事項及安排.docx
template/output/: 中級K3B26_promote_notice_20260305.docx  初級K1A26_class_20260211.docx  初級K1A26_class_20260311.docx  初級K1A26_cs_weekday_20260211.docx  深造K1A26_class_20260205.docx
template/print/: class.docx  cs_sat.docx  cs_weekday.docx  promote_notice.docx
template/teacher/: G. 黃麗娟.doc  K. MA 馬小姐.doc  (+23 more)
